# h1st

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  Brewfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION_NOTES.md  README.md  USAGE_NOTES.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: publish.yml  test.yml
apps/H1Flow-Hosting/: runweb
apps/h1flow-hosting/: __init__.py
docs/: CONTRIBUTING.md  Makefile  README.md  README.rst  adp.py  graph.md  run_local_server.sh
docs/old/: conf.py  old-conf.py  requirements-docs.txt
docs/source/: .conf.py.swp  .index.rst.swp  README.rst  build  build_api.sh  concept.md  concept.rst  conf.py  doc-requirements.txt  index.rst  intro.md
examples/AIcargo/: .dockerignore  Dockerfile  docker-compose.aws.yml  docker-compose.yml  entry.sh  manage.py  requirements.txt  run.sh  runapp
examples/Abc/: graph.py
examples/AutoCyber/: 1. Automotive Cybersecurity - A Cold Start Problem.ipynb  2. Monolithic AD & ML Approaches and Why They are Unsatisfactory.ipynb  3. Using H1st.AI to Encode Human Insights as a Model and Harmonize Human + ML in a H1st.Graph.ipynb  4. Summary & Further Resources.ipynb  README.md  _toc.yml  aegis_datagen.py  blstm_injection_msg_classifier.py  config.py  gradient_boosting_msg_classifier.py  graph.py  msg_freq_event_detector.py  streamlit_app.py  util.py
examples/AutomotiveCybersecurity/: .gitignore  1. Automotive Cybersecurity - A Cold Start Problem.ipynb  3. Using H1st.AI to Encode Human Insights as a Model and Harmonize Human + ML in a H1st.Graph.ipynb  Automotive Cybersecurity - A Cold Start Problem.ipynb  Introduction.ipynb  Monolithic AD & ML Approaches and Why They are Unsatisfactory.ipynb  README.md  Using H1st.AI to Encode Human Insights as a Model and Harmonize Human + ML in a H1st.Graph.ipynb  _config.yml  _toc.yml  aegis_datagen.py  blstm_injection_msg_classifier.py  config.py  gradient_boosting_msg_classifier.py  msg_freq_event_detector.py  util.py
examples/Ensemble/: config.py  ensemble_tutorial.ipynb  h1st_Ensemble_Tutorial.ipynb  sklearn_smv_classifier.py  tensorflow_mlp_classifier.py  test_ensemble_model.py  utils.py
examples/Forecasting/: .gitignore  config.py
examples/HelloWorld/: README.md  graph.py  graph_tutorial.ipynb  helloworld_graph.py  ml_model.py  ml_model_tutorial.ipynb  rule_based_model.py  rule_based_model_tutorial.ipynb  test_hello_world.py
examples/ModelHosting/: requirements.txt  runweb  start
examples/REACT/: manage.py
examples/RayTune/: RayTune_with_H1st.ipynb  RayTune_with_H1st_Class.ipynb  Test_H1st_Tuner.ipynb  config.py  h1st_tune.py  requirements.txt  sklearn_rf_classifier.py  sklearn_smv_classifier.py  tensorflow_mlp_classifier.py  utils.py
examples/SimpleApp/: manage.py
examples/SimpleReactApp/: runapp
examples/SimpleWebApp/: .gitignore  imagenet_keras_xception.json  imagenet_resnet.json  runapp  runweb
examples/Translation/: asgi.py  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
examples/Trust/: breast_cancer.py  breast_cancer_test.py  config.py  config.txt  credit_score.ipynb  profiler_test.ipynb  wine_quality.ipynb  wine_quality.py  wine_quality_test.py
examples/model_hosting_1/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entry.sh  requirements.txt  runapp
examples/utils/: .h1-create-app.swp  h1-create-app  h1-run-app  h1st-create-reactapp  h1st-create-webapp  h1st-run-app  h1st-stop-app
h1st/: __init__.py  metadata.json  requirements-dev.txt  requirements-test.txt  requirements.dev.txt  requirements.txt  setup.py  unittest.cfg
h1st/cli/: __init__.py  notebook.json  pmfp.py  pred_maint.py  project.py
h1st/core/: __init__.py  context.py  dataclass.py  engine.py  ensemble.py  execution.py  fuzzy_logic_model.py  graph.py  ml_model.py  model.py  node.py  node_containable.py  repository.py  rule_based_model.py  serdes.py  serializable.py  step.py  utils.py  viz.py
h1st/django/: api.py  requirements.txt  urls.py
h1st/engines/: simple.py
h1st/exceptions/: exception.py
h1st/flow/: __init__.py  dataclass.py  graph.py
h1st/h1flow/: README.md  h1flow.py  h1step.py  h1step_containable.py  temp_step.py
h1st/h1st/: requirements.dev.txt
h1st/infra/: repository.py
h1st/model/: README.md  boolean_model.py  fuzzy_logic_model.py  fuzzy_logic_modeler.py  fuzzy_logic_rules.py  kgen_model.py  kgen_modeler.py  knowledge_model.py  ml_model.py  ml_modeler.py  model.md  model.py  modelable.md  modelable.py  modeler.py  predictive_model.py  remote_model.py  rule_based_model.py  rule_based_modeler.py
h1st/model_repository/: __init__.py  explorer.py  model_repository.py
h1st/nodes/: decision.py  filter_key.py  model.py
h1st/schema/: __init__.py  schema_inferrer.py  schema_validation_result.py  testing.py  validation_schema.py
h1st/trust/: auditable.py  debiasable.py  decision.py  describable.py  describer.py  enums.py  explainer.py  lime_model_explainer.py  shap_model_describer.py  trustable.py
h1st/tuner/: hyperparameter_tuner.py
h1st/utils/: __init__.py  fs.py  iter.py  log.py  namespace.py  s3.py
models/examples.Ensemble.models.submodel_examples.SK_SVM_Classifier/: latest  m1
models/examples.Ensemble.models.submodel_examples.TF_FC_Classifier/: latest  m2
models/tests.core.test_ensemble_model.RandomForestStackEnsembleClassifier/: ensemble  latest
tests/: test_fixture.py  test_visualization.ipynb  unittest.cfg
tests/cli/: test_cli.py
tutorials/: 1. Automotive Cybersecurity - A Cold Start Problem.ipynb  2. Monolithic AD & ML Approaches and Why They are Unsatisfactory.ipynb  3. Using H1st.AI to Encode Human Insights as a Model and Harmonize Human + ML in a H1st.Graph.ipynb  4. Summary & Further Resources.ipynb  Introduction.ipynb  README.md  _config.yml  _toc.yml  architecture.md  graph_tutorial.ipynb  ml_model_tutorial.ipynb  motivation.md  rule_based_model_tutorial.ipynb
user/: README.md  __init__.py
(+792 files in other folders)
