[tool.poetry]
name = "h1st"
version = "2.1.1"
description = "Human-First AI (H1st)"
authors = ["Aitomatic, Inc. <engineering@aitomatic.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://h1st.ai"
repository = "https://github.com/h1st-ai/h1st"
include = ["h1st/*"]


[tool.poetry.dependencies]
python = "^3.8"

# Data Processing
numpy = ">= 1.23"  # let higher dependencies figure
pandas = ">= 2.0.1"
pyarrow = ">= 12.0.0"
pyspark = ">= 3.4.0"

# Machine Learning / Deep Learning
imbalanced-learn = ">= 0.10.1"
scikit-fuzzy = ">= 0.4.2"
scikit-learn = ">= 1.2.2"
tensorflow = ">= 2.12.0"
xgboost = ">= 1.7.5"

# Trustworthy AI
graphviz = ">= 0.20.1"
lime = ">= 0.2.0.1"
shap = {version = ">= 0.41.0", markers = "python_version < '3.11'"}

# File Systems
fsspec = ">= 2023.5.0"
s3fs = ">= 2023.5.0"

# misc/other
click = ">= 8.1.3"
loguru = ">= 0.7.0"
python-dotenv = ">= 1.0.0"
pyyaml = ">= 6.0"
"ruamel.yaml" = ">= 0.17.21"
tqdm = ">= 4.65.0"
ulid-py = ">= 1.1.0"


[tool.poetry.dev-dependencies]
commitizen = ">= 3.2.2"
pre-commit = ">= 3.3.1"
pylint = ">= 2.17.4"
pytest = ">= 7.3.1"
sphinx = ">= 7.0.0"
sphinx-rtd-theme = ">= 1.2.0"


[tool.poetry.scripts]
h1st = 'h1st.utils.tools:h1st_cli'


[build-system]
requires = [
  "poetry-core >= 1.5.2",
]
build-backend = "poetry.core.masonry.api"


[tool.pylint.format]
max-line-length = 120
