[tool.poetry]
name = "h1st"
version = "2.1.7"
description = "Human-First AI (H1st)"
authors = ["Aitomatic, Inc. <engineering@aitomatic.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://h1st.ai"
repository = "https://github.com/h1st-ai/h1st"
packages = [
  {include = "h1st"},
]
include = [
  "h1st/*",
]


[tool.poetry.dependencies]
python = ">= 3.8, < 4"

# Data Processing
numpy = ">= 1.23"  # let higher dependencies figure
pandas = ">= 1.5"  # let higher dependencies figure
pyarrow = ">= 12.0.1"

# Machine Learning / Deep Learning
scikit-learn = ">= 1.3.0"
xgboost = ">= 1.7.6"

# Trustworthy AI
graphviz = ">= 0.20.1"
lime = ">= 0.2.0.1"
shap = ">= 0.42.1"

# File Systems
fsspec = ">= 2023.6.0"
s3fs = ">= 2023.6.0"

# misc/other
click = ">= 8.1.6"
loguru = ">= 0.7.0"
python-dotenv = ">= 1.0.0"
pyyaml = ">= 6.0.1"
"ruamel.yaml" = ">= 0.17.21"
tqdm = ">= 4.65.0"
ulid-py = ">= 1.1.0"


[tool.poetry.dev-dependencies]
commitizen = ">= 3.5.4"
pre-commit = ">= 3.3.3"
pylint = ">= 2.17.5"
pytest = ">= 7.4.0"
sphinx = ">= 6.2"  # let higher dependencies figure
sphinx-rtd-theme = ">= 1.2.2"


[build-system]
requires = [
  "poetry-core >= 1.6.1",
]
build-backend = "poetry.core.masonry.api"


[tool.pylint.format]
max-line-length = 120
