# still needing setup.cfg or setup.py for editable development installation;
# at mininum, package name & version need specifying


[metadata]
name = h1st
version = 0.1.13

description = Human-First AI (H1st)
long_description = file: README.md
long_description_content_type = text/markdown

author = Aitomatic, Inc.
author_email = engineering@aitomatic.com
maintainer = Aitomatic, Inc.
maintainer_email = engineering@aitomatic.com

url = https://h1st.ai
download_url = https://github.com/h1st-ai/h1st/archive/main.zip
project_urls =
  Homepage = https://h1st.ai
  Documentation = https://h1st.ai
  GitHub = https://github.com/h1st-ai/h1st
  Repository = https://github.com/h1st-ai/h1st

license = Apache-2.0
license_files =

keywords =
  Human-First
  H1st
  Artificial Intelligence
  A.I.
  AI

classifiers =
  Development Status :: 4 - Beta
  Operating System :: MacOS
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering
  Topic :: Software Development :: Libraries :: Python Modules


[options]

# package
package_dir =

packages =
  h1st

py_modules =

ext_package =
ext_modules =

include_package_data = True
package_data =

zip_safe = True


# dependencies
platforms =

python_requires = >= 3.8

install_requires =

setup_requires =


# entry points / scripts
scripts =


# distribution / packaging
cmdclass =
distclass =

script_name =
script_args =
options =


# resources
test_suite =
tests_require =
test_loader =

eager_resources =


# deprecated / ignored by PIP
data_files =
dependency_links =
obsoletes =
provides =
requires =


[options.packages.find]
where = src
exclude =
include =
  *


[options.package_data]
[options.exclude_package_data]


[options.extras_require]
dev =
